--- a/generate_songs/explore-and-plot.ipynb
+++ b/generate_songs/explore-and-plot.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore the chat completions for the fine-tuned model"
+    "# Explore the chat completions for the fine-tuned model (for generate.py)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('foobar.json', 'r') as file:\n",
+    "with open('./models/model_ftjob-KgpcRw4JolOFAn2OuRJxOSy0.json', 'r') as file:\n",
     "    data = json.load(file)\n",
     "\n",
     "fine_tuned_model = data.get('fine_tuned_model')"
@@ -49,25 +49,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Country ass nigga)\n",
+      "(Swea it's Drake man, swea it's Drake man)\n",
+      "(Tryna keep it G)\n",
+      "I tell ya, I tell ya\n",
+      "You know part of the game is figuring out\n",
+      "Who you gon' be if you gon' you know\n",
+      "And that's two choices\n",
+      "Where I come from, in the six, you know what I'm saying.\n",
+      "You gon' either be a lost man\n",
+      "Or a found man, either through the music or through God or through the streets, you know.\n",
+      "(Young Money)\n",
+      "(Yeezy asking ask god to forgive me of my sins man)\n",
+      "(Spirits)\n",
+      "Spirit (Yeah) and Lord I pray that it works out (Yeah)\n"
+     ]
+    }
+   ],
    "source": [
+    "# TODO subsample the training dataset, ask openai to permute the key phrases \n",
     "completion = client.chat.completions.create(\n",
     "  model=fine_tuned_model,\n",
     "  messages=[\n",
     "    {\"role\": \"system\", \"content\": SYSTEM_CONTENT},\n",
-    "    {\"role\": \"user\", \"content\": \"I want to write a Drake song.\"}\n",
+    "    {\"role\": \"user\", \"content\": \"I want to write a Drake song.\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"Ok, let's write a song part by part. First tell me about a part of the song using some phrases.\"},\n",
+    "    {\"role\": \"user\", \"content\": \"the six, Young Money, Yeezy ask god to forgive me of my sins\"}\n",
     "  ]\n",
     ")\n",
-    "print(completion.choices[0].message)"
+    "print(completion.choices[0].message.content)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO inspect loss metrics (with weights and biases integration?)"
+    "# TODO inspect loss metrics and plot them (with weights and biases integration?)"
    ]
   },
   {
@@ -79,8 +103,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
