--- a/generate_songs/explore-and-plot.ipynb
+++ b/generate_songs/explore-and-plot.ipynb
@@ -74,17 +74,23 @@
     }
    ],
    "source": [
-    "# TODO subsample the training dataset, ask openai to permute the key phrases \n",
-    "completion = client.chat.completions.create(\n",
-    "  model=fine_tuned_model,\n",
-    "  messages=[\n",
-    "    {\"role\": \"system\", \"content\": SYSTEM_CONTENT},\n",
-    "    {\"role\": \"user\", \"content\": \"I want to write a Drake song.\"},\n",
-    "    {\"role\": \"assistant\", \"content\": \"Ok, let's write a song part by part. First tell me about a part of the song using some phrases.\"},\n",
-    "    {\"role\": \"user\", \"content\": \"the six, Young Money, Yeezy ask god to forgive me of my sins\"}\n",
-    "  ]\n",
-    ")\n",
-    "print(completion.choices[0].message.content)"
+    "# TODO subsample the training dataset, ask openai to permute the key phrases doesn't really work its too generic\n",
+    "# I can generate maybe 25 examples manually\n",
+    "key_phrases = [\n",
+    "    \"the six, Young Money, Yeezy ask god to forgive me of my sins\"\n",
+    "]\n",
+    "\n",
+    "for key_phrase in key_phrases:\n",
+    "    completion = client.chat.completions.create(\n",
+    "    model=fine_tuned_model,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": SYSTEM_CONTENT},\n",
+    "        {\"role\": \"user\", \"content\": \"I want to write a Drake song.\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"Ok, let's write a song part by part. First tell me about a part of the song using some phrases.\"},\n",
+    "        {\"role\": \"user\", \"content\": key_phrase}\n",
+    "    ]\n",
+    "    )\n",
+    "    print(completion.choices[0].message.content)"
    ]
   },
   {
@@ -99,7 +105,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# The validation loss doesn't really change so it might not make sense."
+   ]
   }
  ],
  "metadata": {
