impl generate undiff songs

--- a/generate_songs/explore-and-plot.ipynb
+++ b/generate_songs/explore-and-plot.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from setup import create_opneaiclient\n",
+    "from setup import create_openaiclient\n",
     "import json"
    ]
   },
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = create_opneaiclient()"
+    "client = create_openaiclient()"
    ]
   },
   {
@@ -74,10 +74,8 @@
     }
    ],
    "source": [
-    "# TODO subsample the training dataset, ask openai to permute the key phrases doesn't really work its too generic\n",
-    "# I can generate maybe 25 examples manually\n",
     "key_phrases = [\n",
-    "    \"the six, Young Money, Yeezy ask god to forgive me of my sins\"\n",
+    "    \"the six, Young Money, OVO\",\n",
     "]\n",
     "\n",
     "for key_phrase in key_phrases:\n",
